@@ -46,6 +46,13 @@ INT_PTR CALLBACK PvpPeExportsDlgProc(
     __in LPARAM lParam
     );
 
+INT_PTR CALLBACK PvpPeLoadConfigDlgProc(
+    __in HWND hwndDlg,
+    __in UINT uMsg,
+    __in WPARAM wParam,
+    __in LPARAM lParam
+    );
+
 INT_PTR CALLBACK PvpPeClrDlgProc(
     __in HWND hwndDlg,
     __in UINT uMsg,
@@ -61,7 +68,7 @@ VOID PvPeProperties()
     NTSTATUS status;
     PROPSHEETHEADER propSheetHeader = { sizeof(propSheetHeader) };
     PROPSHEETPAGE propSheetPage;
-    HPROPSHEETPAGE pages[4];
+    HPROPSHEETPAGE pages[5];
     PIMAGE_DATA_DIRECTORY entry;
 
     status = PhLoadMappedImage(PvFileName->Buffer, NULL, TRUE, &PvMappedImage);
@@ -102,6 +109,16 @@ VOID PvPeProperties()
     propSheetPage.pszTemplate = MAKEINTRESOURCE(IDD_PEEXPORTS);
     propSheetPage.pfnDlgProc = PvpPeExportsDlgProc;
     pages[propSheetHeader.nPages++] = CreatePropertySheetPage(&propSheetPage);
+
+	// Load Config page
+	if (NT_SUCCESS(PhGetMappedImageDataEntry(&PvMappedImage, IMAGE_DIRECTORY_ENTRY_LOAD_CONFIG, &entry)) && entry->VirtualAddress)
+	{
+		memset(&propSheetPage, 0, sizeof(PROPSHEETPAGE));
+		propSheetPage.dwSize = sizeof(PROPSHEETPAGE);
+		propSheetPage.pszTemplate = MAKEINTRESOURCE(IDD_PELOADCONFIG);
+		propSheetPage.pfnDlgProc = PvpPeLoadConfigDlgProc;
+		pages[propSheetHeader.nPages++] = CreatePropertySheetPage(&propSheetPage);
+	}
 
     // CLR page
     if (NT_SUCCESS(PhGetMappedImageDataEntry(&PvMappedImage, IMAGE_DIRECTORY_ENTRY_COM_DESCRIPTOR, &entry)) &&
@@ -546,6 +563,99 @@ INT_PTR CALLBACK PvpPeExportsDlgProc(
     }
 
     return FALSE;
+}
+
+INT_PTR CALLBACK PvpPeLoadConfigDlgProc(
+    __in HWND hwndDlg,
+    __in UINT uMsg,
+    __in WPARAM wParam,
+    __in LPARAM lParam
+    )
+{
+    switch (uMsg)
+    {
+    case WM_INITDIALOG:
+        {
+			PH_AUTO_POOL autoPool;
+            HWND lvHandle;
+			PIMAGE_LOAD_CONFIG_DIRECTORY32 config32;
+			PIMAGE_LOAD_CONFIG_DIRECTORY64 config64;
+			PPH_STRING string;
+
+            lvHandle = GetDlgItem(hwndDlg, IDC_LIST);
+            PhSetListViewStyle(lvHandle, FALSE, TRUE);
+            PhSetControlTheme(lvHandle, L"explorer");
+            PhAddListViewColumn(lvHandle, 0, 0, 0, LVCFMT_LEFT, 220, L"Name");
+            PhAddListViewColumn(lvHandle, 1, 1, 1, LVCFMT_LEFT, 170, L"Value");
+
+#define ADD_VALUE(Name, Value) \
+	do { \
+		INT lvItemIndex; \
+		\
+		lvItemIndex = PhAddListViewItem(lvHandle, MAXINT, Name, NULL); \
+		PhSetListViewSubItem(lvHandle, lvItemIndex, 1, Value); \
+	} while (0)
+
+#define ADD_VALUES(Config) \
+	do { \
+		{ \
+			LARGE_INTEGER time; \
+			SYSTEMTIME systemTime; \
+			\
+			RtlSecondsSince1970ToTime((Config)->TimeDateStamp, &time); \
+			PhLargeIntegerToLocalSystemTime(&systemTime, &time); \
+			\
+			string = PhFormatDateTime(&systemTime); \
+			ADD_VALUE(L"Time stamp", string->Buffer); \
+			PhDereferenceObject(string); \
+		} \
+		\
+		ADD_VALUE(L"Version", PhaFormatString(L"%u.%u", (Config)->MajorVersion, (Config)->MinorVersion)->Buffer); \
+		ADD_VALUE(L"Global flags to clear", PhaFormatString(L"0x%x", (Config)->GlobalFlagsClear)->Buffer); \
+		ADD_VALUE(L"Global flags to set", PhaFormatString(L"0x%x", (Config)->GlobalFlagsSet)->Buffer); \
+		ADD_VALUE(L"Critical section default timeout", PhaFormatUInt64((Config)->CriticalSectionDefaultTimeout, TRUE)->Buffer); \
+		ADD_VALUE(L"De-commit free block threshold", PhaFormatUInt64((Config)->DeCommitFreeBlockThreshold, TRUE)->Buffer); \
+		ADD_VALUE(L"De-commit total free threshold", PhaFormatUInt64((Config)->DeCommitTotalFreeThreshold, TRUE)->Buffer); \
+		ADD_VALUE(L"LOCK prefix table", PhaFormatString(L"0x%Ix", (Config)->LockPrefixTable)->Buffer); \
+		ADD_VALUE(L"Maximum allocation size", PhaFormatString(L"0x%Ix", (Config)->MaximumAllocationSize)->Buffer); \
+		ADD_VALUE(L"Virtual memory threshold", PhaFormatString(L"0x%Ix", (Config)->VirtualMemoryThreshold)->Buffer); \
+		ADD_VALUE(L"Process affinity mask", PhaFormatString(L"0x%Ix", (Config)->ProcessAffinityMask)->Buffer); \
+		ADD_VALUE(L"Process heap flags", PhaFormatString(L"0x%Ix", (Config)->ProcessHeapFlags)->Buffer); \
+		ADD_VALUE(L"CSD version", PhaFormatString(L"%u", (Config)->CSDVersion)->Buffer); \
+		ADD_VALUE(L"Edit list", PhaFormatString(L"0x%Ix", (Config)->EditList)->Buffer); \
+		ADD_VALUE(L"Security cookie", PhaFormatString(L"0x%Ix", (Config)->SecurityCookie)->Buffer); \
+		ADD_VALUE(L"SEH handler table", PhaFormatString(L"0x%Ix", (Config)->SEHandlerTable)->Buffer); \
+		ADD_VALUE(L"SEH handler count", PhaFormatUInt64((Config)->SEHandlerCount, TRUE)->Buffer); \
+	} while (0)
+
+			PhInitializeAutoPool(&autoPool);
+
+			if (PvMappedImage.Magic == IMAGE_NT_OPTIONAL_HDR32_MAGIC)
+			{
+				if (NT_SUCCESS(PhGetMappedImageLoadConfig32(&PvMappedImage, &config32)))
+				{
+					ADD_VALUES(config32);
+				}
+			}
+			else
+			{
+				if (NT_SUCCESS(PhGetMappedImageLoadConfig64(&PvMappedImage, &config64)))
+				{
+					ADD_VALUES(config64);
+				}
+			}
+
+			PhDeleteAutoPool(&autoPool);
+        }
+        break;
+    case WM_NOTIFY:
+        {
+            PvHandleListViewNotifyForCopy(lParam, GetDlgItem(hwndDlg, IDC_LIST));
+        }
+        break;
+    }
+
+	return FALSE;
 }
 
 INT_PTR CALLBACK PvpPeClrDlgProc(
